<resources>
    <string name="app_name">南港展覽館導覽</string>
    <string name="tab_text_1">購票</string>
    <string name="tab_text_2">最新消息</string>
    <string name="tab_text_3">展館介紹</string>
    <string name="tab_text_4">我的票夾</string>
    <string name="about1_text">96年7月底完工、97年3月13日正式營運的台北南港展覽1館，為一擁有上、下層展廳、計可規劃2,467個標準攤位的大型專業展覽館，不但展示面積為台北世貿展覽大樓的兩倍大，其所擁有的13間會議室(可彈性隔間為19間)、2間餐廳及9間面對馬路的商店，均將提供使用者更為人性化及便利性的服務與設施。

台北南港展覽館1館的上層雲端展場屋頂跨距達126 x 180公尺，淨高14.3~27.3公尺，全區無柱位，適合在展覽空檔期間舉辦大型演唱會、直銷會議、獎勵旅遊、宗教集會、運動賽事及公司餐會(含尾牙、春酒)等。為打造國際級、一流的會展空間，貿協已針對南港展覽館的特性，增設多項營運設備，包括多國語言的展場指標及線上導覽系統、全館無線上網等。

台北南港展覽館1館的啟用，已帶動南港經貿園區的整體開發，並對我國經濟產值帶來顯著的貢獻。貿協也將更努力提升我國會展產業的產值，除積極規劃辦理新展外， 60個海外辦事處也將進行全球行銷，積極爭取國外展覽公司來台辦展，讓臺灣會展產業在國際間持續發光發熱。</string>
    <string name="about2_text">台北南港展覽2館於107年8月完工、108年3月4日正式營運，擁有雙層展廳(1F 、 4F) ，全館可規劃之室內攤位數2044格，展示面積為台北世貿展覽大樓的1.5倍，全台獨有的多功能活動空間可容3,200人，室內空間 3,880㎡ ， 可依客製化隔出9種尺寸的隔間，餐飲空間設有3樓餐廳可容500人及B1商店街， 停車場設有汽車格1,296位、大型巴士可容32輛、機車格1,136格，提供來賓更便利及舒適的服務與設施。

台北南港展覽館2館一樓展覽空間挑高12公尺，四樓展覽空間挑高9公尺，適合舉辦大型演唱會、直銷會議、獎勵旅遊、宗教集會及公司餐會(含尾牙、春酒)等。打造國際級規格展覽館，貿協已針對使用者需求增設多項營運設備。

台北南港展覽館2館的落成為會展產業注入新能量，藉此帶動南港經貿園區的區域發展，並對我國經濟產值帶來顯著的貢獻。貿協持續注入新血以提升我國會展產業的價值，近年來積極規劃及爭取辦理國內外新展外，放眼全球並參與國外會展產業的展覽，主動邀約國外展覽公司來台辦展，讓臺灣會展產業在國際間能成為辦展第一首選場地。</string>

    <string name="aboutgreen_text">台北南港展覽館1館的綠色環保措施 南港1館基於愛護自然環境，積極取得臺灣第一座綠建築標章的展覽館，也是臺灣第一個依照國際標準完成温室氣體查證的場館，以實際行動支持政府推動節能減碳政策方針，從掌握場館碳排放到綠色環保營運及多項綠色環保措施，期待與業界及訪客共同攜手創造永續環境。</string>
    <string name="aboutgreen_content2">南1館通過「基地綠化」、「基地保水」、「日常節能」、「二氧化碳減量」、「室內環境」、「水資源」、「污水垃圾改善」等7項指標，獲內政部頒發綠建築標章。</string>
    <string name="aboutgreen_content3">南1館於2009及2011年依照國際標準完成溫室氣體排放量查證，並取得英國標準協會 (The British Standards Institution, BSI) ISO 14064-1碳盤查認證。</string>
    <string name="aboutgreen_content4">
        展覽期間鼓勵展覽主辦單位展場走道不鋪設地毯。\n
        鼓勵參展廠商及設計業者，減少木作裝潢，採重覆使用之系統攤位，減少製造裝潢廢棄物，同時達到資源重複利用(Reuse)及循環使用(Recycle)的節能環保概念。\n
        南1館部分紙類宣傳品採雙面印刷。\n
        於館內廊道多處放置資源回收桶。\n
        於B1用餐區放置廚餘回收桶。\n
        全館洗手間馬桶及小便斗沖水使用雨水回收水。\n
        洗手間裝設感應式水龍頭，降低洗手用水。\n
        設置冷熱水飲水機取代塑膠杯水或瓶裝水。\n
        非展覽/活動期間不開啟電扶梯，僅以電梯載客。\n
    </string>
    <string name="aboutgreen_content5">
            利用電子郵件發送會展相關訊息，並以EDM進行市場推廣。利用電子郵件發送會展相關訊息，並以EDM進行市場推廣。\n
            員工申請假期、社團以網路申請，減少紙張用量。\n
            員工電腦強制設定為黑白雙面列印，重要文件才以彩色列印。\n
            於員工辦公室內設置「資源回收專區」，進行瓶罐、廢電池、紙類等回收。\n
            辦公室內放置背面空白回收紙專區，非重要文件以回收紙列印。\n
            員工開會皆自備茶水杯。\n
        </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>